--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Battleship</string>
+
+    <string name="instructions">
+
+        <p>The game is based on the board game <bold>Battleship</bold>.</p>
+        <p>Here you have three hidden ships, each taking 3 cells, which you have to sink by hitting them.</p>
+        <p>Press the cells and if it turns <b>RED</b> then it\'s a <b>HIT</b>.</p>
+
+    </string>
 </resources>
